# klipBored

./: Cargo.toml  README.md  install.sh  io.github.klipbored.app.desktop  klipbored.desktop  uninstall.sh
.github/workflows/: release.yml
debian/: postinst  postrm
src/: main.rs  style.css
